# Skynet

./: .gitignore  README.md
docs/plans/: 2026-02-15-skynet-design.md  2026-02-15-skynet-implementation.md
skynet/: .ralphrc  README.md  install.sh  pyproject.toml
skynet/.ralph/: PROMPT.md  fix_plan.md
skynet/config/: settings.yaml
skynet/config/systemd/: skynet-api.service  skynet-web.service
skynet/data/skynet/: SKYNET.md
skynet/data/skynet/learnings/: glitches.md  patterns.md  user-preferences.md
skynet/supervisor/: db.py  main.py  session_parser.py  telegram_bot.py  watcher.py
skynet/tests/: test_api.py  test_db.py  test_session_parser.py  test_telegram.py  test_watcher.py
skynet/web/: package-lock.json  package.json
skynet/web/src/app/: page.tsx
skynet/web/src/components/: ChatView.tsx  MessageInput.tsx  SessionList.tsx
