[project]
name = "skynet"
version = "0.1.0"
description = "Claude Code Session Supervisor"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "sqlalchemy>=2.0.0",
    "watchdog>=4.0.0",
    "python-telegram-bot>=21.0",
    "pyyaml>=6.0",
    "aiosqlite>=0.19.0",
    "websockets>=12.0",
    "httpx>=0.26.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
